nixidy/generated/prod/atuin/Service-atuin.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: atuin
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: atuin
    app.kubernetes.io/service: atuin
  name: atuin
  namespace: development
spec:
  ports:
    - name: http
      port: 8888
      protocol: TCP
      targetPort: 8888
    - name: metrics
      port: 9001
      protocol: TCP
      targetPort: 9001
  selector:
    app.kubernetes.io/controller: atuin
    app.kubernetes.io/instance: atuin
    app.kubernetes.io/name: atuin
  type: ClusterIP
